# opa_eval_py

./: .gitignore  Cargo.toml  Makefile  README.md  opa_eval.pyi  pyproject.toml  requirements.txt
pre_compiled/: opa_eval-0.1.0-cp313-cp313t-win_amd64.whl  opa_eval-0.1.0-cp39-abi3-macosx_11_0_arm64.whl  opa_eval-0.1.0-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  opa_eval-0.1.0-cp39-abi3-win_amd64.whl
src/: lib.rs
tests/: bench_compare.py  policy.rego  test_bench.py  test_eval.py
